[gd_scene load_steps=3 format=3 uid="uid://ca0suwyjmpl3y"]

[ext_resource type="Script" path="res://Tools/LevelTranstionData.gd" id="1_7ynwg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_umk3o"]
size = Vector2(31, 126)

[node name="DefineLevelTransition" type="Node2D"]
script = ExtResource("1_7ynwg")

[node name="Area2D" type="Area2D" parent="." groups=["SceneTrigger"]]

[node name="SceneTrigger" type="CollisionShape2D" parent="Area2D"]
position = Vector2(16, 63)
shape = SubResource("RectangleShape2D_umk3o")
debug_color = Color(1, 1, 0.25098, 0.623529)

[node name="TransitionTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="TransitionTimer" to="." method="_on_transition_timer_timeout"]
